✨feat: Add "MOVIE" theme support and refine theme workflows
Introduced the "MOVIE" theme to the bartender workflow, including its resource structure and creation guidelines. Removed "formula" dependencies for themes, streamlined initialization logic, and enhanced maintainability by refactoring theme loading and validation.